--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,8 @@ pinecone_client==2.2.2
 pydantic==1.10.9
 Requests==2.31.0
 scikit_learn==1.2.2
-sentence_transformers==2.2.2
 text2vec==1.2.1
-torch==2.0.1
 yahooquery==2.3.2
 yfinance==0.2.25
+tiktoken
+wikipedia
